--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "fcc-learn-npm-package-json",
+	"author": "mario-ortuno",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -11,6 +12,6 @@
 		"type": "git",
 		"url": "https://idontknow/todo.git"
 	},
-	"author": "Mario Ortuno"
+	
 
 }
